Fixed inner chat notification mobile css

--- a/app/components/chat/chat.css
+++ b/app/components/chat/chat.css
@@ -12,8 +12,8 @@
     }
 
     #chat .notification-sector {
-        width: 100% - 25px;
-        margin-right: 25px
+        width: calc(100% - 28px) !important;
+        margin-right: 28px
     }
 }
 
@@ -29,7 +29,7 @@
         z-index: 997;
         left: 0;
         bottom: 0px;
-        box-shadow: 3px 5px 10px 5px #969696;
+        box-shadow: 2px 5px 15px 1px #969696;
         border-radius: 3px;
     }
 }
@@ -311,7 +311,7 @@
     width: 100%;
     height: 35px;
     background-color: #333333e6;
-    top: 40px;
+    top: 39px;
     padding: 10px;
     position: absolute;
     display: flex;
